// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`meta — issue #1563 (derived FormatHealth) AC3: mock scores stay within ±10 of the retired literals commander: derived report snapshot 1`] = `
{
  "archetypeBalance": {
    "aggro": 22.9,
    "combo": 16.9,
    "control": 28.3,
    "midrange": 19.5,
    "tempo": 12.4,
  },
  "colorDistribution": [
    {
      "color": "Red",
      "count": 1,
      "percentage": 20,
    },
    {
      "color": "Multicolor",
      "count": 4,
      "percentage": 80,
    },
  ],
  "diversityScore": 69.8,
  "score": 69.8,
}
`;

exports[`meta — issue #1563 (derived FormatHealth) AC3: mock scores stay within ±10 of the retired literals modern: derived report snapshot 1`] = `
{
  "archetypeBalance": {
    "aggro": 28.4,
    "combo": 16,
    "control": 18.3,
    "midrange": 24.3,
    "tempo": 12.9,
  },
  "colorDistribution": [
    {
      "color": "Red",
      "count": 1,
      "percentage": 20,
    },
    {
      "color": "Multicolor",
      "count": 4,
      "percentage": 80,
    },
  ],
  "diversityScore": 73.6,
  "score": 73.6,
}
`;

exports[`meta — issue #1563 (derived FormatHealth) AC3: mock scores stay within ±10 of the retired literals standard: derived report snapshot 1`] = `
{
  "archetypeBalance": {
    "aggro": 25.1,
    "combo": 16.5,
    "control": 22.1,
    "midrange": 20.9,
    "tempo": 15.4,
  },
  "colorDistribution": [
    {
      "color": "Red",
      "count": 1,
      "percentage": 20,
    },
    {
      "color": "Multicolor",
      "count": 4,
      "percentage": 80,
    },
  ],
  "diversityScore": 74.5,
  "score": 74.5,
}
`;
